--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,12 @@
   <parent>
     <groupId>org.apache.camel</groupId>
     <artifactId>camel-parent</artifactId>
-    <version>3.0.0-M1</version>
+    <version>3.0.0-M3</version>
   </parent>
 
   <groupId>org.apache-extras.camel-extra</groupId>
   <artifactId>camel-parent</artifactId>
-  <version>3.0.0-M1</version>
+  <version>3.0.0-M3</version>
   <packaging>pom</packaging>
   <name>Camel Extra</name>
   <description>Camel Extra Parent POM</description>
@@ -54,7 +54,7 @@
   </prerequisites>
 
   <properties>
-    <camel-version>3.0.0-M1</camel-version>
+    <camel-version>3.0.0-M3</camel-version>
     <camel-spi-version>3.0.0-SNAPSHOT</camel-spi-version>
 
     <site-repo-url>scpexe://people.apache.org/www/activemq.apache.org/camel/maven/</site-repo-url>
@@ -213,7 +213,7 @@
 
   <modules>
     <module>components</module>
-    <module>examples</module>
+    <!--module>examples</module-->
     <module>platform</module>
   </modules>
 
